--- a/DemoBotApp/DemoBotApp/DemoBotApp.csproj
+++ b/DemoBotApp/DemoBotApp/DemoBotApp.csproj
@@ -189,6 +189,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\DemoBotApp-Sandbox - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
