remove secret credentials from web.config

--- a/DemoBotApp/DemoBotApp/Web.config
+++ b/DemoBotApp/DemoBotApp/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <appSettings>
-    <add key="CognitiveSubscriptionKey" value="16a433c4b68241dbb136447a324be771"/>
-    <add key="BotId" value="demobotservice-eas"/>
-    <add key="DirectLineSecret" value="HY6eguA5VH8.cwA.Hs0.36pUL-4FWqmTNcckkkJ75_QIF_MjKizLN3zQVSpGO_8"/>
+    <add key="CognitiveSubscriptionKey" value=""/>
+    <add key="BotId" value=""/>
+    <add key="DirectLineSecret" value=""/>
   </appSettings>
   
   <system.web>
